NEW 259960
[Cocoa] Super gigantic images should not be decoded with their natural sizes
https://bugs.webkit.org/show_bug.cgi?id=259960
Summary [Cocoa] Super gigantic images should not be decoded with their natural sizes
Said Abou-Hallawa
Reported 2023-08-08 18:07:04 PDT
Test case: https://upload.wikimedia.org/wikipedia/commons/e/ea/Van_Gogh_-_Starry_Night_-_Google_Art_Project.jpg Image sub-sampling should be enabled for macOS so the number of the decoded pixels is scaled down by the ratio between destinationSize and sourceSize. For non-scaled display, sub-images should be used to display the image on different tiles. The size of the sub-image will be the mapping of the destination rectangle clipped by the GraphicsContext.bounds() in the image rectangle.
Attachments
Said Abou-Hallawa
Comment 1 2023-08-08 18:07:45 PDT
Said Abou-Hallawa
Comment 2 2023-08-08 18:17:58 PDT
Note You need to log in before you can comment on or make changes to this bug.