[Cocoa] Super gigantic images should not be decoded with their natural sizes https://bugs.webkit.org/show_bug.cgi?id=259960 rdar://113305719

Reviewed by NOBODY (OOPS!).

(1) For non-scaled image display, asynchronous image decoding should be disabled
to avoid decoding the whole image. Sub-images should be used to display the image
on different tiles. The size of the sub-image is the mapping of the destination
rectangle in the image rectangle clipped by the GraphicsContext.bounds().

(2) DecodingOptions will be refactored to handle the sub-image decoding case.
Instead of having an optional sizeForDrawing, a variant of { monostate, IntRect,
IntSize } will be used. This variant will be named `DecodingGeometry`.

Here is the meaning of the six possible case of DecodingOptions:

    DecodingMode    DecodingGeometry    Image decoding

    Synchronous     std::monostate      Synchronous full image
    Synchronous     IntSize             N/A
    Synchronous     IntRect             Synchronous sub-image
    Asynchronous    std::monostate      Thumbnail full image
    Asynchronous    IntSize             Thumbnail sizeForDrawing
    Asynchronous    IntRect             Not implemented yet

Deciding the sub-image decoding has to happen at the painting time because it can
used only if image sub-sampling is disabled.

(3) An optional `subimageRect` will be added to NativeImage. This member will be
set when a sub-image is decoded. It gives the rectangle of the sub-image in the
rectangle if the PlatformImage.

* LayoutTests/fast/images/resources/green-20000x20000.jpg: Added.
* LayoutTests/fast/images/super-gigantic-image-subsampled-natural-size-expected.html: Added.
* LayoutTests/fast/images/super-gigantic-image-subsampled-natural-size.html: Added.
* Source/WebCore/platform/graphics/BitmapImage.cpp:
(WebCore::BitmapImage::draw):
* Source/WebCore/platform/graphics/BitmapImage.h:
* Source/WebCore/platform/graphics/BitmapImageSource.cpp:
(WebCore::BitmapImageSource::startAnimation):
(WebCore::BitmapImageSource::isGiganticForDecoding const):
(WebCore::BitmapImageSource::nativeImageAtIndexCacheIfNeeded):
(WebCore::BitmapImageSource::decodingOptionsForDrawing const):
(WebCore::BitmapImageSource::currentNativeImageForDrawing):
* Source/WebCore/platform/graphics/BitmapImageSource.h:
* Source/WebCore/platform/graphics/DecodingOptions.h:
(WebCore::DecodingOptions::DecodingOptions):
(WebCore::DecodingOptions::decodingGeometry const):
(WebCore::DecodingOptions::sizeForDrawing const):
(WebCore::DecodingOptions::rectForDrawing const):
(WebCore::DecodingOptions::hasSizeForDrawing const):
(WebCore::DecodingOptions::hasRectForDrawing const):
(WebCore::DecodingOptions::hasFullSize const):
(WebCore::DecodingOptions::isCompatibleWith const):
* Source/WebCore/platform/graphics/ImageDecoder.h:
(WebCore::ImageDecoder::createFrameSubimageAtIndex):
* Source/WebCore/platform/graphics/ImageFrame.cpp:
(WebCore::ImageFrame::hasFullSizeNativeImage const): Deleted.
* Source/WebCore/platform/graphics/ImageFrame.h:
(WebCore::ImageFrame::hasNativeImage):
(WebCore::ImageFrame::hasFullSizeNativeImage): Deleted.
* Source/WebCore/platform/graphics/ImageSource.cpp:
(WebCore::ImageSource::primaryNativeImageForDrawing):
(WebCore::ImageSource::currentNativeImageForDrawing):
* Source/WebCore/platform/graphics/ImageSource.h:
(WebCore::ImageSource::isGiganticForDecoding const):
* Source/WebCore/platform/graphics/NativeImage.cpp:
(WebCore::NativeImage::create):
(WebCore::NativeImage::createTransient):
(WebCore::NativeImage::NativeImage):
* Source/WebCore/platform/graphics/NativeImage.h:
* Source/WebCore/platform/graphics/cg/ImageDecoderCG.cpp:
(WebCore::ImageDecoderCG::createFrameSubimageAtIndex):
* Source/WebCore/platform/graphics/cg/ImageDecoderCG.h:
* Source/WebCore/platform/graphics/cg/NativeImageCG.cpp:
(WebCore::NativeImage::create):
(WebCore::NativeImage::createTransient):
* Source/WebKit/WebProcess/WebCoreSupport/ShareableBitmapUtilities.cpp:
(WebKit::createShareableBitmap):