Source/WebCore/platform/graphics/ImageDecoder.h
@@ -103,6 +103,7 @@ public:
     virtual unsigned frameBytesAtIndex(size_t, SubsamplingLevel = SubsamplingLevel::Default) const = 0;
 
     virtual PlatformImagePtr createFrameImageAtIndex(size_t, SubsamplingLevel = SubsamplingLevel::Default, const DecodingOptions& = DecodingOptions(DecodingMode::Synchronous)) = 0;
+    virtual PlatformImagePtr createFrameSubimageAtIndex(size_t, SubsamplingLevel, const IntRect&) { return nullptr; }
 
     virtual void setExpectedContentSize(long long) { }
     virtual void setData(const FragmentedSharedBuffer&, bool allDataReceived) = 0;
